src/test/data/highlighting/unknown_sections.tz
parameter string;
storage string;
<error descr="<section> expected">return</error> string;
<error descr="<section> expected">unknown</error> string;
code {};